--- a/akka-big-primes/pom.xml
+++ b/akka-big-primes/pom.xml
@@ -1,10 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.jlmc</groupId>
     <artifactId>akka-big-primes</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>Archetype - akka-big-primes</name>
+
+    <parent>
+        <groupId>io.github.jlmc</groupId>
+        <artifactId>akka-java-examples</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -37,13 +40,11 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
