--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,15 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <java.version>21</java.version>
+        <akka.version>2.6.3</akka.version>
+        <junit.version>5.5.2</junit.version>
+    </properties>
+
     <modules>
         <module>akka-big-primes</module>
         <module>akka-big-primes-ch5-ex1</module>
@@ -13,5 +22,23 @@
         <module>session-7-racer-simulation</module>
         <module>session-9-actor-lifecycles</module>
         <module>session-10-logging</module>
+        <module>session-11-blockchain</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
