--- a/session-7-racer-simulation/pom.xml
+++ b/session-7-racer-simulation/pom.xml
@@ -2,12 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.jlmc</groupId>
     <artifactId>session-7-racer-simulation</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>session-7-racer-simulation</name>
+    <parent>
+        <groupId>io.github.jlmc</groupId>
+        <artifactId>akka-java-examples</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
