--- a/session-9-actor-lifecycles/pom.xml
+++ b/session-9-actor-lifecycles/pom.xml
@@ -2,10 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.jlmc</groupId>
     <artifactId>session-9-actor-lifecycles</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <parent>
+        <groupId>io.github.jlmc</groupId>
+        <artifactId>akka-java-examples</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
 
     <properties>
@@ -39,13 +43,11 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
