--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <java.version>21</java.version>
         <akka.version>2.6.3</akka.version>
         <junit.version>5.5.2</junit.version>
+        <logback-classic.version>1.2.3</logback-classic.version>
     </properties>
 
     <modules>
@@ -23,10 +24,32 @@
         <module>session-9-actor-lifecycles</module>
         <module>session-10-logging</module>
         <module>session-11-blockchain</module>
+        <module>session-12-blockchain-akka</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-actor-typed_2.13</artifactId><!-- 2.13 means the scala version that have been used to build the artifact -->
+                <version>${akka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-actor-testkit-typed_2.13</artifactId>
+                <version>${akka.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback-classic.version}</version>
+            </dependency>
+
+
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
