Session 12 - Unit Testing with log messages

--- a/session-12-blockchain-akka/pom.xml
+++ b/session-12-blockchain-akka/pom.xml
@@ -13,6 +13,19 @@
     <artifactId>session-12-blockchain-akka</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor-typed_2.13</artifactId><!-- 2.13 means the scala version that have been used to build the artifact -->
+            <version>${akka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor-testkit-typed_2.13</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
