--- a/session-14-actor-supervision/pom.xml
+++ b/session-14-actor-supervision/pom.xml
@@ -13,18 +13,21 @@
     <artifactId>session-14-actor-supervision</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor-typed_2.13</artifactId><!-- 2.13 means the scala version that have been used to build the artifact -->
-            <version>${akka.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor-testkit-typed_2.13</artifactId>
-            <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
