Session 15: Starting Project

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>session-12-blockchain-akka</module>
         <module>session-13-interraction-patterns</module>
         <module>session-14-actor-supervision</module>
+        <module>session-15-standard-techniques</module>
     </modules>
 
     <dependencyManagement>
